--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.modal {
-  width: 2000px !important;
-  height: 700px !important;
+.input-sex {
+  width: 100%;
 }
